--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ssr",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "build": "vite build"
   },
@@ -13,7 +12,16 @@
   "dependencies": {
     "@tanstack/react-router": "^1.131.49",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "@babel/core": "^7.26.8",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/register": "^7.25.9",
+    "babel-loader": "^9.2.1",
+    "html-webpack-plugin": "^5.6.3",
+    "react-server-dom-webpack": "^19.0.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
